Overflow tooltips are now shown correctly.

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -597,6 +597,17 @@ body.logged-in {
   }
 }
 
+.tabs-left .nav-tabs li span {
+  display: block;
+  width: 100%;
+}
+.tabs-left .nav-tabs li span, .tabs-left td, .tabs-left th {
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
 /* custom inclusion of right, left and below tabs */
 .tabs-left {
   background-color: #F4F6F8;
